--- a/FZero/Vanrise.Fzero.Services.Report/Reports/rptToSyrianOperator.rdlc
+++ b/FZero/Vanrise.Fzero.Services.Report/Reports/rptToSyrianOperator.rdlc
@@ -6,25 +6,25 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>0.88692in</Width>
+              <Width>0.88618in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.6766in</Width>
+              <Width>1.67586in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.79353in</Width>
+              <Width>0.79279in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.79935in</Width>
+              <Width>0.79861in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.8125in</Width>
+              <Width>0.81176in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.46875in</Width>
+              <Width>0.46801in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.66667in</Width>
+              <Width>0.66593in</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -238,7 +238,7 @@
         <Top>0.95708in</Top>
         <Left>0.3125in</Left>
         <Height>0.48958in</Height>
-        <Width>6.10432in</Width>
+        <Width>6.09911in</Width>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -279,15 +279,15 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>1.60504in</Width>
+              <Width>1.58949in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>4.52517in</Width>
+              <Width>4.50962in</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
             <TablixRow>
-              <Height>0.23958in</Height>
+              <Height>0.47916in</Height>
               <TablixCells>
                 <TablixCell>
                   <CellContents>
@@ -372,9 +372,9 @@
         </TablixRowHierarchy>
         <DataSetName>dsViewGeneratedCalls</DataSetName>
         <Top>2.04688in</Top>
-        <Left>0.30729in</Left>
-        <Height>0.23958in</Height>
-        <Width>6.13021in</Width>
+        <Left>0.3125in</Left>
+        <Height>0.47916in</Height>
+        <Width>6.09911in</Width>
         <ZIndex>3</ZIndex>
         <Style>
           <Border>
@@ -386,25 +386,25 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>1.02334in</Width>
+              <Width>1.0226in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.44607in</Width>
+              <Width>0.44533in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.82412in</Width>
+              <Width>0.82338in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.60493in</Width>
+              <Width>1.60419in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.37612in</Width>
+              <Width>0.37538in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.0176in</Width>
+              <Width>1.01686in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.81214in</Width>
+              <Width>0.8114in</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -1013,10 +1013,10 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>dsViewGeneratedCalls</DataSetName>
-        <Top>2.73833in</Top>
+        <Top>2.98833in</Top>
         <Left>0.3125in</Left>
         <Height>1.26042in</Height>
-        <Width>6.10432in</Width>
+        <Width>6.09911in</Width>
         <ZIndex>4</ZIndex>
         <Style>
           <Border>
@@ -1028,7 +1028,7 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>6.14063in</Width>
+              <Width>6.09911in</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -1087,10 +1087,10 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>dsViewGeneratedCalls</DataSetName>
-        <Top>2.42708in</Top>
-        <Left>0.30729in</Left>
+        <Top>2.67708in</Top>
+        <Left>0.3125in</Left>
         <Height>0.30208in</Height>
-        <Width>6.14063in</Width>
+        <Width>6.09911in</Width>
         <ZIndex>5</ZIndex>
         <Style>
           <Border>
@@ -1102,10 +1102,10 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>1.69358in</Width>
+              <Width>1.69098in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>4.43663in</Width>
+              <Width>4.43402in</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -1191,10 +1191,10 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>dsViewGeneratedCalls</DataSetName>
-        <Top>4.05729in</Top>
-        <Left>0.30729in</Left>
+        <Top>4.30729in</Top>
+        <Left>0.3125in</Left>
         <Height>0.59375in</Height>
-        <Width>6.13021in</Width>
+        <Width>6.125in</Width>
         <ZIndex>6</ZIndex>
         <Style>
           <Border>
@@ -1372,7 +1372,7 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>dsViewGeneratedCalls</DataSetName>
-        <Top>4.80208in</Top>
+        <Top>5.05208in</Top>
         <Left>0.3125in</Left>
         <Height>0.21875in</Height>
         <Width>6.125in</Width>
@@ -1442,11 +1442,14 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>dsViewGeneratedCalls</DataSetName>
-        <Top>5.02083in</Top>
+        <Top>5.27083in</Top>
         <Left>0.30729in</Left>
         <Height>0.42188in</Height>
         <Width>1.69358in</Width>
         <ZIndex>8</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -1458,11 +1461,14 @@
         <Value>signature</Value>
         <MIMEType>image/gif</MIMEType>
         <Sizing>FitProportional</Sizing>
-        <Top>5.02083in</Top>
+        <Top>5.27083in</Top>
         <Left>2.00087in</Left>
         <Height>0.42188in</Height>
         <Width>4.43664in</Width>
         <ZIndex>9</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Color>LightGrey</Color>
@@ -1483,10 +1489,10 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>2.2531in</Width>
+              <Width>2.23495in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>3.88232in</Width>
+              <Width>3.86417in</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -1591,10 +1597,10 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>dsViewGeneratedCalls</DataSetName>
-        <Top>5.78in</Top>
+        <Top>6.03in</Top>
         <Left>0.3125in</Left>
         <Height>0.25in</Height>
-        <Width>6.13542in</Width>
+        <Width>6.09911in</Width>
         <ZIndex>10</ZIndex>
         <Style>
           <Border>
@@ -1606,10 +1612,10 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>1.69358in</Width>
+              <Width>1.69098in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>4.43663in</Width>
+              <Width>4.43402in</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -1698,10 +1704,10 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>dsViewGeneratedCalls</DataSetName>
-        <Top>6.13021in</Top>
-        <Left>0.30729in</Left>
+        <Top>6.38021in</Top>
+        <Left>0.3125in</Left>
         <Height>1.13542in</Height>
-        <Width>6.13021in</Width>
+        <Width>6.125in</Width>
         <ZIndex>11</ZIndex>
         <Style>
           <Border>
@@ -1911,7 +1917,7 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>dsViewGeneratedCalls</DataSetName>
-        <Top>7.44271in</Top>
+        <Top>7.69271in</Top>
         <Left>0.3125in</Left>
         <Height>0.21875in</Height>
         <Width>4.11609in</Width>
@@ -1926,16 +1932,16 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>2.27097in</Width>
+              <Width>2.26967in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.43496in</Width>
+              <Width>1.43366in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.03949in</Width>
+              <Width>1.03819in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.38479in</Width>
+              <Width>1.38349in</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -2095,10 +2101,10 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>dsViewGeneratedCalls</DataSetName>
-        <Top>7.81771in</Top>
-        <Left>0.30729in</Left>
+        <Top>8.06771in</Top>
+        <Left>0.3125in</Left>
         <Height>0.21875in</Height>
-        <Width>6.13021in</Width>
+        <Width>6.125in</Width>
         <ZIndex>13</ZIndex>
         <Style>
           <Border>
@@ -2218,7 +2224,7 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>dsViewGeneratedCalls</DataSetName>
-        <Top>8.03906in</Top>
+        <Top>8.28906in</Top>
         <Left>0.3125in</Left>
         <Height>0.42188in</Height>
         <Width>6.125in</Width>
@@ -2233,25 +2239,25 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>0.88397in</Width>
+              <Width>0.88322in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.67365in</Width>
+              <Width>1.6729in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.79058in</Width>
+              <Width>0.78983in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.7964in</Width>
+              <Width>0.79565in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.51331in</Width>
+              <Width>0.51256in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.77888in</Width>
+              <Width>0.77813in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.66756in</Width>
+              <Width>0.66681in</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -2554,7 +2560,7 @@
         <Top>1.60547in</Top>
         <Left>0.3125in</Left>
         <Height>0.21875in</Height>
-        <Width>6.10435in</Width>
+        <Width>6.09911in</Width>
         <ZIndex>15</ZIndex>
         <Style>
           <Border>
@@ -2579,25 +2585,25 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>0.88397in</Width>
+              <Width>0.88322in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.67365in</Width>
+              <Width>1.6729in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.79058in</Width>
+              <Width>0.78983in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.7964in</Width>
+              <Width>0.79565in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.51331in</Width>
+              <Width>0.51256in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.77888in</Width>
+              <Width>0.77813in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.66756in</Width>
+              <Width>0.66681in</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -2867,7 +2873,7 @@
         <Top>1.42188in</Top>
         <Left>0.3125in</Left>
         <Height>0.21875in</Height>
-        <Width>6.10435in</Width>
+        <Width>6.09911in</Width>
         <ZIndex>16</ZIndex>
         <Style>
           <Border>
@@ -2888,7 +2894,7 @@
         </Style>
       </Tablix>
     </ReportItems>
-    <Height>8.46094in</Height>
+    <Height>8.71094in</Height>
     <Style />
   </Body>
   <Width>6.44792in</Width>
@@ -3113,6 +3119,10 @@
         </Values>
       </DefaultValue>
       <AllowBlank>true</AllowBlank>
+      <Prompt>ReportParameter1</Prompt>
+    </ReportParameter>
+    <ReportParameter Name="HideSignature">
+      <DataType>Boolean</DataType>
       <Prompt>ReportParameter1</Prompt>
     </ReportParameter>
   </ReportParameters>
