--- a/FZero/Vanrise.Fzero.Services.Report/Reports/rptToZainOperator.rdlc
+++ b/FZero/Vanrise.Fzero.Services.Report/Reports/rptToZainOperator.rdlc
@@ -260,136 +260,29 @@
           </Border>
         </Style>
       </Image>
-      <Tablix Name="Tablix5">
-        <TablixBody>
-          <TablixColumns>
-            <TablixColumn>
-              <Width>1.60504in</Width>
-            </TablixColumn>
-            <TablixColumn>
-              <Width>4.52517in</Width>
-            </TablixColumn>
-          </TablixColumns>
-          <TablixRows>
-            <TablixRow>
-              <Height>0.23958in</Height>
-              <TablixCells>
-                <TablixCell>
-                  <CellContents>
-                    <Textbox Name="Textbox24">
-                      <CanGrow>true</CanGrow>
-                      <KeepTogether>true</KeepTogether>
-                      <Paragraphs>
-                        <Paragraph>
-                          <TextRuns>
-                            <TextRun>
-                              <Value>Fraud Report Description</Value>
-                              <Style>
-                                <FontSize>9pt</FontSize>
-                                <FontWeight>Bold</FontWeight>
-                              </Style>
-                            </TextRun>
-                          </TextRuns>
-                          <Style />
-                        </Paragraph>
-                      </Paragraphs>
-                      <rd:DefaultName>Textbox1</rd:DefaultName>
-                      <Style>
-                        <Border>
-                          <Color>LightGrey</Color>
-                          <Style>Solid</Style>
-                        </Border>
-                        <PaddingLeft>2pt</PaddingLeft>
-                        <PaddingRight>2pt</PaddingRight>
-                        <PaddingTop>2pt</PaddingTop>
-                        <PaddingBottom>2pt</PaddingBottom>
-                      </Style>
-                    </Textbox>
-                  </CellContents>
-                </TablixCell>
-                <TablixCell>
-                  <CellContents>
-                    <Textbox Name="Textbox25">
-                      <CanGrow>true</CanGrow>
-                      <KeepTogether>true</KeepTogether>
-                      <Paragraphs>
-                        <Paragraph>
-                          <TextRuns>
-                            <TextRun>
-                              <Value>Suspected GSM SIM Box Bypass - Discovered through Call Generation Engine.</Value>
-                              <Style>
-                                <FontSize>9pt</FontSize>
-                                <Color>DimGray</Color>
-                              </Style>
-                            </TextRun>
-                          </TextRuns>
-                          <Style />
-                        </Paragraph>
-                      </Paragraphs>
-                      <rd:DefaultName>Textbox5</rd:DefaultName>
-                      <Style>
-                        <Border>
-                          <Color>LightGrey</Color>
-                          <Style>Solid</Style>
-                        </Border>
-                        <PaddingLeft>2pt</PaddingLeft>
-                        <PaddingRight>2pt</PaddingRight>
-                        <PaddingTop>2pt</PaddingTop>
-                        <PaddingBottom>2pt</PaddingBottom>
-                      </Style>
-                    </Textbox>
-                  </CellContents>
-                </TablixCell>
-              </TablixCells>
-            </TablixRow>
-          </TablixRows>
-        </TablixBody>
-        <TablixColumnHierarchy>
-          <TablixMembers>
-            <TablixMember />
-            <TablixMember />
-          </TablixMembers>
-        </TablixColumnHierarchy>
-        <TablixRowHierarchy>
-          <TablixMembers>
-            <TablixMember />
-          </TablixMembers>
-        </TablixRowHierarchy>
-        <DataSetName>dsViewGeneratedCalls</DataSetName>
-        <Top>2.04688in</Top>
-        <Left>0.30729in</Left>
-        <Height>0.23958in</Height>
-        <Width>6.13021in</Width>
-        <ZIndex>2</ZIndex>
-        <Style>
-          <Border>
-            <Style>Solid</Style>
-          </Border>
-        </Style>
-      </Tablix>
       <Tablix Name="Tablix6">
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>1.02334in</Width>
+              <Width>1.02038in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.44607in</Width>
+              <Width>0.44311in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.82412in</Width>
+              <Width>0.82116in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.31088in</Width>
+              <Width>1.30792in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.53461in</Width>
+              <Width>0.53165in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.0176in</Width>
+              <Width>1.01464in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.96839in</Width>
+              <Width>0.96543in</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -998,11 +891,11 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>dsViewGeneratedCalls</DataSetName>
-        <Top>2.73833in</Top>
+        <Top>2.86333in</Top>
         <Left>0.3125in</Left>
         <Height>1.19792in</Height>
-        <Width>6.12501in</Width>
-        <ZIndex>3</ZIndex>
+        <Width>6.10432in</Width>
+        <ZIndex>2</ZIndex>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -1013,7 +906,7 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>6.14063in</Width>
+              <Width>6.10432in</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -1072,11 +965,11 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>dsViewGeneratedCalls</DataSetName>
-        <Top>2.42708in</Top>
-        <Left>0.30729in</Left>
+        <Top>2.55208in</Top>
+        <Left>0.3125in</Left>
         <Height>0.30208in</Height>
-        <Width>6.14063in</Width>
-        <ZIndex>4</ZIndex>
+        <Width>6.10432in</Width>
+        <ZIndex>3</ZIndex>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -1087,10 +980,10 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>1.69358in</Width>
+              <Width>1.68064in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>4.43663in</Width>
+              <Width>4.42369in</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -1176,11 +1069,11 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>dsViewGeneratedCalls</DataSetName>
-        <Top>4.18229in</Top>
-        <Left>0.30729in</Left>
+        <Top>4.30729in</Top>
+        <Left>0.3125in</Left>
         <Height>0.59375in</Height>
-        <Width>6.13021in</Width>
-        <ZIndex>5</ZIndex>
+        <Width>6.10432in</Width>
+        <ZIndex>4</ZIndex>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -1191,16 +1084,16 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>1.68837in</Width>
+              <Width>1.6832in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.67324in</Width>
+              <Width>1.66807in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.03819in</Width>
+              <Width>1.03302in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.7252in</Width>
+              <Width>1.72003in</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -1357,11 +1250,11 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>dsViewGeneratedCalls</DataSetName>
-        <Top>4.92708in</Top>
+        <Top>5.05208in</Top>
         <Left>0.3125in</Left>
         <Height>0.21875in</Height>
-        <Width>6.125in</Width>
-        <ZIndex>6</ZIndex>
+        <Width>6.10432in</Width>
+        <ZIndex>5</ZIndex>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -1372,7 +1265,7 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>1.69358in</Width>
+              <Width>1.68837in</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -1427,11 +1320,14 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>dsViewGeneratedCalls</DataSetName>
-        <Top>5.14583in</Top>
-        <Left>0.30729in</Left>
+        <Top>5.27083in</Top>
+        <Left>0.3125in</Left>
         <Height>0.42188in</Height>
-        <Width>1.69358in</Width>
-        <ZIndex>7</ZIndex>
+        <Width>1.68837in</Width>
+        <ZIndex>6</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -1443,11 +1339,14 @@
         <Value>signature</Value>
         <MIMEType>image/gif</MIMEType>
         <Sizing>FitProportional</Sizing>
-        <Top>5.14583in</Top>
+        <Top>5.27083in</Top>
         <Left>2.00087in</Left>
         <Height>0.42188in</Height>
         <Width>4.43664in</Width>
-        <ZIndex>8</ZIndex>
+        <ZIndex>7</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Color>LightGrey</Color>
@@ -1468,10 +1367,10 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>2.2531in</Width>
+              <Width>2.23755in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>3.88232in</Width>
+              <Width>3.86677in</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -1576,11 +1475,11 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>dsViewGeneratedCalls</DataSetName>
-        <Top>5.905in</Top>
+        <Top>6.03in</Top>
         <Left>0.3125in</Left>
         <Height>0.25in</Height>
-        <Width>6.13542in</Width>
-        <ZIndex>9</ZIndex>
+        <Width>6.10432in</Width>
+        <ZIndex>8</ZIndex>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -1591,10 +1490,10 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>1.69358in</Width>
+              <Width>1.68064in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>4.43663in</Width>
+              <Width>4.42369in</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -1683,11 +1582,11 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>dsViewGeneratedCalls</DataSetName>
-        <Top>6.25521in</Top>
-        <Left>0.30729in</Left>
+        <Top>6.38021in</Top>
+        <Left>0.3125in</Left>
         <Height>1.13542in</Height>
-        <Width>6.13021in</Width>
-        <ZIndex>10</ZIndex>
+        <Width>6.10432in</Width>
+        <ZIndex>9</ZIndex>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -1896,11 +1795,11 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>dsViewGeneratedCalls</DataSetName>
-        <Top>7.56771in</Top>
+        <Top>7.69271in</Top>
         <Left>0.3125in</Left>
         <Height>0.21875in</Height>
         <Width>4.11609in</Width>
-        <ZIndex>11</ZIndex>
+        <ZIndex>10</ZIndex>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -1911,16 +1810,16 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>2.27097in</Width>
+              <Width>2.2645in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.43496in</Width>
+              <Width>1.42849in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.03949in</Width>
+              <Width>1.03302in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.38479in</Width>
+              <Width>1.37832in</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -2080,11 +1979,11 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>dsViewGeneratedCalls</DataSetName>
-        <Top>7.94271in</Top>
-        <Left>0.30729in</Left>
+        <Top>8.06771in</Top>
+        <Left>0.3125in</Left>
         <Height>0.21875in</Height>
-        <Width>6.13021in</Width>
-        <ZIndex>12</ZIndex>
+        <Width>6.10432in</Width>
+        <ZIndex>11</ZIndex>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -2095,10 +1994,10 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>2.26576in</Width>
+              <Width>2.25542in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>3.85924in</Width>
+              <Width>3.8489in</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -2203,11 +2102,11 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>dsViewGeneratedCalls</DataSetName>
-        <Top>8.16406in</Top>
+        <Top>8.28906in</Top>
         <Left>0.3125in</Left>
         <Height>0.42188in</Height>
-        <Width>6.125in</Width>
-        <ZIndex>13</ZIndex>
+        <Width>6.10432in</Width>
+        <ZIndex>12</ZIndex>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -2540,7 +2439,7 @@
         <Left>0.3125in</Left>
         <Height>0.21875in</Height>
         <Width>6.10435in</Width>
-        <ZIndex>14</ZIndex>
+        <ZIndex>13</ZIndex>
         <Style>
           <Border>
             <Style>None</Style>
@@ -2853,7 +2752,7 @@
         <Left>0.3125in</Left>
         <Height>0.21875in</Height>
         <Width>6.10435in</Width>
-        <ZIndex>15</ZIndex>
+        <ZIndex>14</ZIndex>
         <Style>
           <Border>
             <Style>None</Style>
@@ -2872,8 +2771,115 @@
           </RightBorder>
         </Style>
       </Tablix>
+      <Tablix Name="Tablix5">
+        <TablixBody>
+          <TablixColumns>
+            <TablixColumn>
+              <Width>1.5921in</Width>
+            </TablixColumn>
+            <TablixColumn>
+              <Width>4.51223in</Width>
+            </TablixColumn>
+          </TablixColumns>
+          <TablixRows>
+            <TablixRow>
+              <Height>0.47916in</Height>
+              <TablixCells>
+                <TablixCell>
+                  <CellContents>
+                    <Textbox Name="Textbox24">
+                      <CanGrow>true</CanGrow>
+                      <KeepTogether>true</KeepTogether>
+                      <Paragraphs>
+                        <Paragraph>
+                          <TextRuns>
+                            <TextRun>
+                              <Value>Fraud Report Description</Value>
+                              <Style>
+                                <FontSize>9pt</FontSize>
+                                <FontWeight>Bold</FontWeight>
+                              </Style>
+                            </TextRun>
+                          </TextRuns>
+                          <Style />
+                        </Paragraph>
+                      </Paragraphs>
+                      <rd:DefaultName>Textbox1</rd:DefaultName>
+                      <Style>
+                        <Border>
+                          <Color>LightGrey</Color>
+                          <Style>Solid</Style>
+                        </Border>
+                        <PaddingLeft>2pt</PaddingLeft>
+                        <PaddingRight>2pt</PaddingRight>
+                        <PaddingTop>2pt</PaddingTop>
+                        <PaddingBottom>2pt</PaddingBottom>
+                      </Style>
+                    </Textbox>
+                  </CellContents>
+                </TablixCell>
+                <TablixCell>
+                  <CellContents>
+                    <Textbox Name="Textbox25">
+                      <CanGrow>true</CanGrow>
+                      <KeepTogether>true</KeepTogether>
+                      <Paragraphs>
+                        <Paragraph>
+                          <TextRuns>
+                            <TextRun>
+                              <Value>Suspected GSM SIM Box Bypass - Discovered through Call Generation Engine.</Value>
+                              <Style>
+                                <FontSize>9pt</FontSize>
+                                <Color>DimGray</Color>
+                              </Style>
+                            </TextRun>
+                          </TextRuns>
+                          <Style />
+                        </Paragraph>
+                      </Paragraphs>
+                      <rd:DefaultName>Textbox5</rd:DefaultName>
+                      <Style>
+                        <Border>
+                          <Color>LightGrey</Color>
+                          <Style>Solid</Style>
+                        </Border>
+                        <PaddingLeft>2pt</PaddingLeft>
+                        <PaddingRight>2pt</PaddingRight>
+                        <PaddingTop>2pt</PaddingTop>
+                        <PaddingBottom>2pt</PaddingBottom>
+                      </Style>
+                    </Textbox>
+                  </CellContents>
+                </TablixCell>
+              </TablixCells>
+            </TablixRow>
+          </TablixRows>
+        </TablixBody>
+        <TablixColumnHierarchy>
+          <TablixMembers>
+            <TablixMember />
+            <TablixMember />
+          </TablixMembers>
+        </TablixColumnHierarchy>
+        <TablixRowHierarchy>
+          <TablixMembers>
+            <TablixMember />
+          </TablixMembers>
+        </TablixRowHierarchy>
+        <DataSetName>dsViewGeneratedCalls</DataSetName>
+        <Top>1.99089in</Top>
+        <Left>0.3125in</Left>
+        <Height>0.47916in</Height>
+        <Width>6.10432in</Width>
+        <ZIndex>15</ZIndex>
+        <Style>
+          <Border>
+            <Style>Solid</Style>
+          </Border>
+        </Style>
+      </Tablix>
     </ReportItems>
-    <Height>8.58594in</Height>
+    <Height>8.71094in</Height>
     <Style />
   </Body>
   <Width>6.44792in</Width>
@@ -3098,6 +3104,10 @@
         </Values>
       </DefaultValue>
       <AllowBlank>true</AllowBlank>
+      <Prompt>ReportParameter1</Prompt>
+    </ReportParameter>
+    <ReportParameter Name="HideSignature">
+      <DataType>Boolean</DataType>
       <Prompt>ReportParameter1</Prompt>
     </ReportParameter>
   </ReportParameters>
